WERE-651 make sure modal does not collapse when zooming in on mobile device

--- a/app/assets/stylesheets/nail_polish/base/widgets/modal.scss
+++ b/app/assets/stylesheets/nail_polish/base/widgets/modal.scss
@@ -1,6 +1,7 @@
 .modal {
   margin: $spacing auto;
-  max-width: 300px;
+  max-width: 320px;
+  min-width: 320px;
   position: relative;
 
   @include border-radius;
